--- a/index.html
+++ b/index.html
@@ -7,10 +7,129 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
+    <header class="header second-bg">
+        <nav class=".open-sans-normal">
+            <h2 class="nav-title">Ma<span>r</span>y</h2>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class-="dark-2" href=""></a>Blog</li>
+                <li><a href=""><button class="btn">Hire me</button></a></li>
+            </ul>
+        </nav>
+        <div class="barner">
+            <div class="barner-content">
+                <h4 class="barner-grettins dark-2">Hi,I Am</h4>
+                <h1 class="barner-title">Mary Hardy</h1>
+                <p class="para-content">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contract</button>
+            </div>
+            <img class="barner-img" src="portfolio-resources/images/hardy.png" alt="">
+        </div>
 
     </header>
     <main>
+        <section class="about second-bg">
+            <h3 class="about-title">About Me</h3>
+            <p class="about-discription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p> 
+            <div class="about-items">
+                <!-- .about-item*4>p.item-title+p.item-discription -->
+                <div class="about-item">
+                    <p class="item-title">Form:</p>
+                    <p class="item-discription">Los Angeles,USA</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Name:</p>
+                    <p class="item-discription">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-discription">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth:</p>
+                    <p class="item-discription">11 feb 2002</p>
+                </div>
+            </div>
+        </section>
+        <section class="skills second-bg">
+            <h1 class="section-title text-center">What I do</h1>
+            <p class="section-discription text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="resume">
+            <h2 class="resume-title text-center">A summary of My Resume</h2>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="resume-discription">
+                        <h3 class="resume-discription-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-discription-sub">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-details">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div><hr>
+                    <div class="resume-discription">
+                        <h3 class="resume-discription-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-discription-sub">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-details">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div><hr>
+                    <div class="resume-discription">
+                        <h3 class="resume-discription-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-discription-sub">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-details">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="resume-discription">
+                        <h3 class="resume-discription-title">Sr. Font End Developer</h3>
+                        <h4 class="resume-discription-sub">Apple Inc / 2020 - Current</h4>
+                        <p class="resume-details">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div><hr>
+                    <div class="resume-discription">
+                        <h3 class="resume-discription-title">Sr. Font End Developer</h3>
+                        <h4 class="resume-discription-sub">Apple Inc / 2020 - Current</h4>
+                        <p class="resume-details">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div><hr>
+                    <div class="resume-discription">
+                        <h3 class="resume-discription-title">Sr. Font End Developer</h3>
+                        <h4 class="resume-discription-sub">Apple Inc / 2020 - Current</h4>
+                        <p class="resume-details">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-download">
+                <button class="btn">Download CV</button>
+            </div>
+
+        </section>
 
     </main>
     <footer>
